# rust-example-cad

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cad-cli/: Cargo.toml
cad-cli/src/: cli.rs  command.rs  error.rs  main.rs
cad-cli/src/command/: produce_areas.rs  produce_circles.rs
cad-geometry/: Cargo.toml
cad-geometry/src/: area.rs  lib.rs
cad-geometry/src/application/: figure_producer.rs  mod.rs
cad-geometry/src/figures/: circle.rs  figure.rs  mod.rs  rectangle.rs
cad-geometry/tests/: integration.rs
cad-rest/: Cargo.toml
cad-rest/src/: error.rs  main.rs  services.rs
