[package]
name = "cad-rest"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8", features = ["tokio","tracing"]}
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
cad-geometry = { path = "../cad-geometry"}
